# HIMS-CDI

./: LICENSE  README.md  pyproject.toml  results.json
data/: synthetic_hims_cdi_dataset.csv
examples/: demo.ipynb
src/hims_cdi/: __init__.py  hims_cdi_eval.py
src/hims_cdi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
supplementary_files/: File S6 - Study_Exclusion_Log_69.csv
